# plane_classiication

./: README.md  howToRun
dataset_input/laz/: b2.laz  dtm.laz
scripts/: conversions.py  dtm.py  main.py
src/segmentation/: CMakeLists.txt  clasificationMap.cpp
